docs: Google Reviewガイドラインを参照

--- a/docs/development/coding-guidelines/開発ルール.md
+++ b/docs/development/coding-guidelines/開発ルール.md
@@ -61,7 +61,7 @@ sidebar_position: 1
   * 参照がないクラス、メソッドは削除する。
   * **残してほしいもの、フレームワークから参照されているものには、コメントを付けるか、周知する。**
 
-* boolを返すメソッドのとき、&&や||で繋げて返してよいのは、二つまでとする( #2 )
+* boolを返すメソッドのとき、&&や||で繋げて返してよいのは、二つまでとする
   * 好みによる? 個々の値（IsGoodSize等)がデバッグ中に良くわからないので、分けたほうが保守性が高そう
     ```cs
     // NG
@@ -71,7 +71,7 @@ sidebar_position: 1
     }
 
     // OK
-    public bool IsOK
+    public bool IsOK()
     {
         if(IsGoodSize) return true;
         if(IsGoodColor) return true;
@@ -87,5 +87,5 @@ sidebar_position: 1
     * TODO: 全体共有してあとでやること。
     * NOTE: どうしてもコードからは読み取れない意図等をかく。
     * FIXME: 修正を誰かに頼む場合
-    * CHECK
+    * CHECK: 参考文献
 * 開発中に個人的なコメントを書くのは自由。developにマージする際に消すこと。(レビューで指摘すること)
