docs: ライセンス表記の画像を追加

--- a/blog/2025-01-29-license.md
+++ b/blog/2025-01-29-license.md
@@ -8,5 +8,7 @@ hide_table_of_contents: false
 ---
 
 このドキュメントは、[**CC BY 4.0**](https://creativecommons.org/licenses/by/4.0/deed.ja)で作られています。
-
+<a href='https://creativecommons.org/licenses/by/4.0/deed.ja'>
+    <img src='https://mirrors.creativecommons.org/presskit/buttons/88x31/png/by.png' width='88' height='31'/>
+</a>
 <!-- truncate -->
